<resources>
    <string name="app_name">VIPS affinity</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="teachers">Teachers</string>
    <string name="profile">Profile</string>
    <string name="poll">Poll</string>
    <string name="under_development">under development</string>
    <string name="vips">VIPS</string>
    <string name="temp_name">Shubham Sharma</string>
    <string name="my_faculty">My Faculty</string>
    <string name="professors">Professors</string>
    <string name="about_vsit">About VSIT</string>
    <string name="events">Events</string>
    <string name="mathematics">Mathematics</string>
    <string name="ms_indu_sahu">Ms.Indu Sahu</string>
    <string name="c_lang">C lang</string>
    <string name="department">Department</string>
    <string name="bio">Bio</string>
    <string name="loading">loading....</string>
    <string name="proficiency">Proficiency</string>
    <string name="experience">Experience</string>
    <string name="back_to_home">Back to Home</string>
    <string name="phone">Phone</string>
    <string name="gmail">Gmail</string>
    <string name="na">N/A</string>
    <string name="no_internet">No Internet</string>
    <string name="affinity">Affinity</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="or">or</string>
    <string name="enrollment_no">Enrollment No.</string>
    <string name="dob">DOB</string>
    <string name="vipsa">vipsa</string>
    <string name="user_does_not_exist">User doesn\'t exist in the database.</string>
    <string name="dob_does_not_match">Date of birth doesn\'t match.</string>
    <string name="male">m</string>
    <string name="female">f</string>
    <string name="user_name">user name</string>
    <string name="cet_rank">cet rank</string>
    <string name="college_full_name">Vivekananda Institute Of Professional Studies</string>
    <string name="current_batch">batch (2020–2023)</string>
    <string name="vsit">VSIT</string>
    <string name="course">Course</string>
    <string name="bca">BCA</string>
    <string name="semester">Semester</string>
    <string name="hod_signature">HOD Signature</string>
    <string name="vips_address">Outer Ring Rd, AU Block, Ranikhet, Pitam Pura, New Delhi, Delhi 110034</string>
    <string name="colon">:</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="residence">Residence</string>
    <string name="college_contact_no">011 2734 3401</string>
    <string name="contact">Contact</string>
    <string name="your_virtual_id_card">Your Virtual ID Card</string>
    <string name="features">Features</string>
    <string name="virtual_id_card">Virtual ID Card</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

</resources>