<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/img_faculty"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_my_faculty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/name_faculty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_semibold"
            android:maxLines="1"
            android:text="@string/ms_indu_sahu"
            android:textColor="@color/colorGray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_faculty"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/department_short_faculty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="1"
            android:text="@string/c_lang"
            android:textColor="@color/colorLightBlue"
            android:textSize="12sp"
            android:translationY="-2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/name_faculty"
            app:layout_constraintTop_toBottomOf="@id/name_faculty" />

        <TextView
            android:id="@+id/bio_faculty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="2"
            android:text="@string/bio"
            android:textColor="@color/colorGray"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@id/img_faculty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/name_faculty" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>